--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -24,15 +24,17 @@
     "react/prop-types": 0,
     "semi": 2,
     "comma-dangle": 2,
-    "object-property-newline": 2,
     "object-curly-newline": [
       2,
       {
         "ObjectExpression": {
-          "minProperties": 2,
+          "minProperties": 3,
           "multiline": true
         },
-        "ImportDeclaration": "always"
+        "ImportDeclaration": {
+          "minProperties": 3,
+          "multiline": true
+        }
       }
     ],
     "quotes": [
