--- a/package.json
+++ b/package.json
@@ -11,18 +11,16 @@
     "eslint": "eslint ."
   },
   "dependencies": {
-    "@zeit/next-css": "^1.0.1",
-    "@zeit/next-less": "^1.0.1",
-    "@zeit/next-sass": "^1.0.1",
-    "less": "^3.12.2",
-    "next": "^10.2.3",
+    "next": "^12.1.0",
     "next-cookies": "^2.0.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
     "redux-saga": "^1.1.3",
-    "redux-saga-routines": "^3.2.3"
+    "redux-saga-routines": "^3.2.3",
+    "sass": "^1.49.8",
+    "url-loader": "^4.1.1"
   },
   "devDependencies": {
     "@types/node": "^15.6.1",
@@ -32,9 +30,7 @@
     "@typescript-eslint/parser": "^5.12.0",
     "eslint": "^7.24.0",
     "eslint-plugin-react": "^7.28.0",
-    "file-loader": "^6.2.0",
     "typescript": "^4.2.4",
-    "url-loader": "^4.1.1",
     "webpack": "4.44.1"
   }
 }
