--- a/package.json
+++ b/package.json
@@ -2,6 +2,12 @@
   "name": "learn-starter",
   "version": "0.1.0",
   "private": true,
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
   "scripts": {
     "dev": "next dev -p 3001",
     "build": "next build",
@@ -25,6 +31,7 @@
   "devDependencies": {
     "@types/node": "^15.6.1",
     "@types/react": "^17.0.7",
+    "@types/react-dom": "^17.0.11",
     "@types/react-redux": "^7.1.18",
     "@typescript-eslint/eslint-plugin": "^5.12.0",
     "@typescript-eslint/parser": "^5.12.0",
