--- a/package.json
+++ b/package.json
@@ -2,12 +2,6 @@
   "name": "learn-starter",
   "version": "0.1.0",
   "private": true,
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
   "scripts": {
     "dev": "next dev -p 3001",
     "build": "next build",
@@ -36,8 +30,11 @@
     "@typescript-eslint/eslint-plugin": "^5.12.0",
     "@typescript-eslint/parser": "^5.12.0",
     "eslint": "^7.24.0",
+    "eslint-config-prettier": "^8.4.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.28.0",
+    "prettier": "^2.5.1",
     "typescript": "^4.2.4",
-    "webpack": "4.44.1"
+    "webpack": "^5.69.1"
   }
 }
